# frontend.py

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github-disabled/workflows/: macos.yml
.github/workflows/: macos.yml  ubuntu.yml  windows-debug-deploy.yml  windows.yml
cmake/: Catch2Helpers.cmake  GetParser.cmake  GithubHelpers.cmake  SetupTest.cmake  conan_provider.cmake
cmake/packaging/: Frontend.pyConfig.cmake.in
docs/: .gitignore  Frontend.pyTest.graphml  README.md  architecture.md  examples.md.in  export_examples.sh  mkdocs.yml
docs/ReleaseNotes/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md
docs/examples/: .gitignore
docs/public/: FAQ.md  conversions.md  examples.md  introduction.md  template_naming_convention.md
include/Frontend/Python/: frontend.h  frontend.hpp
src/: Frontend.py.cpp
src/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Frontend/Python/: frontend.cpp
src/Helpers/: combine.hpp  enumsToString.cpp  enumsToString.hpp  getOverloadedFunctions.cpp  getOverloadedFunctions.hpp  split.cpp  split.hpp  string.cpp  string.hpp  types.cpp  types.hpp
src/Helpers/Pybind/: checkType.cpp  checkType.hpp  extractIncludes.cpp  extractIncludes.hpp
src/Pybind/: checkType.cpp  checkType.hpp  getOverloadedFunctions.cpp  getOverloadedFunctions.hpp  returnValuePolicy.cpp  returnValuePolicy.hpp
src/Pybind/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Pybind/Helpers/: combine.hpp  getDocumentationParameter.cpp  getDocumentationParameter.hpp  operatorNames.cpp  operatorNames.hpp  split.cpp  split.hpp  string.cpp  string.hpp  trampolineClass.cpp  trampolineClass.hpp  types.cpp  types.hpp
src/Pybind/Proxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp  typeInfo.hpp
src/PybindProxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp  typeInfo.hpp
tests/: CMakeLists.txt  README.md  arrays.cpp  classes.cpp  complex.cpp  containers.cpp  dependency.cpp  deques.cpp  documentationStyles.cpp  enums.cpp  filesystem_paths.cpp  functional.cpp  functions.cpp  globalVariables.cpp  inheritence.cpp  lists.cpp  maps.cpp  memberVariables.cpp  namespaceSameAsModule.cpp  namespaces.cpp  operators.cpp  optionals.cpp  overloadedFunctions.cpp  pairs.cpp  sets.cpp  smartPointers.cpp  templates.cpp  tuples.cpp  unordered_maps.cpp  unordered_sets.cpp  userDefined.cpp  valarrays.cpp  variants.cpp  vectors.cpp  virtualInheritence.cpp
tests/Builders/: attributeBuilder.cpp  classBuilder.cpp  enumBuilder.cpp  functionBuilder.cpp  moduleFileBuilder.cpp  typeToStringBuilder.cpp
tests/Helpers/: combine.cpp
tests/Helpers/Pybind/: checkType.cpp  extractIncludes.cpp
tests/Pybind/: checkType.cpp
tests/Pybind/Builders/: attributeBuilder.cpp  classBuilder.cpp  enumBuilder.cpp  functionBuilder.cpp  moduleFileBuilder.cpp  typeToStringBuilder.cpp
tests/Pybind/Helpers/: combine.cpp
tests/Pybind/Proxy/: attribute.cpp  class.cpp  enum.cpp  function.cpp  module.cpp  moduleFile.cpp
tests/PybindProxy/: attribute.cpp  class.cpp  enum.cpp  function.cpp  module.cpp  moduleFile.cpp
tests/TestUtil/include/TestStage/: .gitignore  paths.cpp.in  paths.hpp  paths.hpp.in  stage.cpp  stage.hpp  stageFunctions.hpp  temporaryStage.hpp
tests/TestUtil/include/TestUtil/: compare.hpp  files.hpp  parse.hpp  parserConfig.hpp.in  pybindStage.cpp  pybindStage.hpp  runPybindTest.hpp  string.hpp  types.hpp
tests/testStage/: .gitignore  CMakeLists.txt  README.md  configureAndBuild.bat
tests/testStage/cmake/: GetPybind11.cmake  ModuleName.cmake  Sources.cmake  TargetName.cmake
tests/testStage/src/: myModule.cpp
tools/packaging/: CMakeLists.txt
